# distributed-detection-web-service

./: NOTES.md  README.md  app.py  extract_features.py  pyproject.toml  requirements.txt
models/: rf_model_phiusiil_v3.1.pkl
