[project]
name = "distributed-detection-web-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "dnspython>=2.7.0",
    "flask[async]>=3.1.0",
    "gunicorn>=23.0.0",
    "hypercorn>=0.17.3",
    "joblib>=1.4.2",
    "matplotlib>=3.9.3",
    "pandas>=2.2.3",
    "python-whois>=0.9.5",
    "scikit-learn==1.3.2",
    "seaborn>=0.13.2",
    "tldextract>=5.1.3",
]
